[`custom-directives/`] Java 21; Gradle 8.10; graphql-java 20.9