@@ -4,21 +4,6 @@ plugins {
     application
 }
 
-/**
- * Configure the 'application' tasks to enable Java language "Preview Features". Specifically, we want the "JEP 406: Pattern Matching for switch"
- * preview feature. https://openjdk.java.net/jeps/406
- */
-tasks {
-    withType(JavaCompile::class.java) {
-        options.compilerArgs.addAll(arrayOf("--enable-preview"))
-    }
-
-    withType(Test::class.java) {
-        jvmArgs = listOf("--enable-preview")
-        useJUnitPlatform()
-    }
-}
-
 dependencies {
     implementation(libs.slf4j.api)
     runtimeOnly(libs.slf4j.simple)
